crates/vp_pm_cli/src/snapshots/vp_pm_cli__lifecycle_env__tests__snapshot_bun_stamps_no_lifecycle_vars.snap
---
source: crates/vp_pm_cli/src/lifecycle_env.rs
expression: "render_lifecycle_stamp(PackageManagerType::Bun, \"1.3.0\", &[])"
---
bun 1.3.0
