crates/vp_pm_cli/src/snapshots/vp_pm_cli__lifecycle_env__tests__snapshot_pnpm_js_entry_preferred_over_native.snap
---
source: crates/vp_pm_cli/src/lifecycle_env.rs
expression: "render_lifecycle_stamp(PackageManagerType::Pnpm, \"12.0.0\",\n&[\"pnpm.cjs\", native_pnpm_bin_name()])"
---
pnpm 12.0.0
npm_execpath=[INSTALL_DIR]/bin/pnpm.cjs
npm_config_user_agent=pnpm/12.0.0 npm/? node/v22.23.1 [platform] [arch]
INIT_CWD=[INIT_CWD]
npm_node_execpath=[NODE]
NODE=[NODE]
